--- a/marijan/EDA_Marijan.ipynb
+++ b/marijan/EDA_Marijan.ipynb
@@ -7806,282 +7806,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "id": "f230cb0e-8963-408f-8eff-a09c543dd360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[('absolute_humidity_2m:gm3', 'dew_point_2m:K'), 23,24\n",
+    " \n",
+    " ('clear_sky_energy_1h:J', 'clear_sky_rad:W'), 78,80\n",
+    " ('diffuse_rad:W', 'diffuse_rad_1h:J'), 71, 69\n",
+    " ('direct_rad:W', 'direct_rad_1h:J'), 85, 83\n",
+    " \n",
+    " ('effective_cloud_cover:p', 'total_cloud_cover:p'), -21, -18\n",
+    " \n",
+    " ('msl_pressure:hPa', 'pressure_100m:hPa'), 18,18, \n",
+    " ('msl_pressure:hPa', 'pressure_50m:hPa'), 18, 18\n",
+    " ('msl_pressure:hPa', 'sfc_pressure:hPa'), 18, 17\n",
+    " ('pressure_100m:hPa', 'pressure_50m:hPa'), 18, 18\n",
+    " ('pressure_100m:hPa', 'sfc_pressure:hPa'),18 17\n",
+    " ('pressure_50m:hPa', 'sfc_pressure:hPa')] 18 17"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "12b3a75e-9133-4e88-a1a8-f8021a7deba7",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>pv_measurement</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>pv_measurement</th>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>direct_rad:W</th>\n",
-       "      <td>0.853315</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>direct_rad_1h:J</th>\n",
-       "      <td>0.828454</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>clear_sky_rad:W</th>\n",
-       "      <td>0.803990</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>clear_sky_energy_1h:J</th>\n",
-       "      <td>0.781647</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>diffuse_rad:W</th>\n",
-       "      <td>0.705704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sun_elevation:d</th>\n",
-       "      <td>0.691070</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>diffuse_rad_1h:J</th>\n",
-       "      <td>0.689930</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>is_in_shadow:idx</th>\n",
-       "      <td>0.573644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>is_day:idx</th>\n",
-       "      <td>0.537770</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>relative_humidity_1000hPa:p</th>\n",
-       "      <td>0.374446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>air_density_2m:kgm3</th>\n",
-       "      <td>0.364369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>t_1000hPa:K</th>\n",
-       "      <td>0.338399</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wind_speed_v_10m:ms</th>\n",
-       "      <td>0.265496</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dew_point_2m:K</th>\n",
-       "      <td>0.244038</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>visibility:m</th>\n",
-       "      <td>0.242822</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>absolute_humidity_2m:gm3</th>\n",
-       "      <td>0.229924</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>effective_cloud_cover:p</th>\n",
-       "      <td>0.210716</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pressure_100m:hPa</th>\n",
-       "      <td>0.182301</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>msl_pressure:hPa</th>\n",
-       "      <td>0.182269</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total_cloud_cover:p</th>\n",
-       "      <td>0.179321</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ceiling_height_agl:m</th>\n",
-       "      <td>0.177534</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pressure_50m:hPa</th>\n",
-       "      <td>0.177477</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sfc_pressure:hPa</th>\n",
-       "      <td>0.172617</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>cloud_base_agl:m</th>\n",
-       "      <td>0.163880</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>snow_water:kgm2</th>\n",
-       "      <td>0.130121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>super_cooled_liquid_water:kgm2</th>\n",
-       "      <td>0.121977</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wind_speed_10m:ms</th>\n",
-       "      <td>0.089271</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>precip_type_5min:idx</th>\n",
-       "      <td>0.087411</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>rain_water:kgm2</th>\n",
-       "      <td>0.081230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wind_speed_u_10m:ms</th>\n",
-       "      <td>0.068022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>dew_or_rime:idx</th>\n",
-       "      <td>0.065608</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>sun_azimuth:d</th>\n",
-       "      <td>0.064520</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fresh_snow_24h:cm</th>\n",
-       "      <td>0.063604</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>precip_5min:mm</th>\n",
-       "      <td>0.060665</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>snow_depth:cm</th>\n",
-       "      <td>0.057964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fresh_snow_12h:cm</th>\n",
-       "      <td>0.047860</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fresh_snow_6h:cm</th>\n",
-       "      <td>0.045782</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>prob_rime:p</th>\n",
-       "      <td>0.040825</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fresh_snow_3h:cm</th>\n",
-       "      <td>0.040175</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>fresh_snow_1h:cm</th>\n",
-       "      <td>0.032443</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>snow_melt_10min:mm</th>\n",
-       "      <td>0.018081</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>wind_speed_w_1000hPa:ms</th>\n",
-       "      <td>0.006872</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>elevation:m</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>snow_density:kgm3</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>snow_drift:idx</th>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                pv_measurement\n",
-       "pv_measurement                        1.000000\n",
-       "direct_rad:W                          0.853315\n",
-       "direct_rad_1h:J                       0.828454\n",
-       "clear_sky_rad:W                       0.803990\n",
-       "clear_sky_energy_1h:J                 0.781647\n",
-       "diffuse_rad:W                         0.705704\n",
-       "sun_elevation:d                       0.691070\n",
-       "diffuse_rad_1h:J                      0.689930\n",
-       "is_in_shadow:idx                      0.573644\n",
-       "is_day:idx                            0.537770\n",
-       "relative_humidity_1000hPa:p           0.374446\n",
-       "air_density_2m:kgm3                   0.364369\n",
-       "t_1000hPa:K                           0.338399\n",
-       "wind_speed_v_10m:ms                   0.265496\n",
-       "dew_point_2m:K                        0.244038\n",
-       "visibility:m                          0.242822\n",
-       "absolute_humidity_2m:gm3              0.229924\n",
-       "effective_cloud_cover:p               0.210716\n",
-       "pressure_100m:hPa                     0.182301\n",
-       "msl_pressure:hPa                      0.182269\n",
-       "total_cloud_cover:p                   0.179321\n",
-       "ceiling_height_agl:m                  0.177534\n",
-       "pressure_50m:hPa                      0.177477\n",
-       "sfc_pressure:hPa                      0.172617\n",
-       "cloud_base_agl:m                      0.163880\n",
-       "snow_water:kgm2                       0.130121\n",
-       "super_cooled_liquid_water:kgm2        0.121977\n",
-       "wind_speed_10m:ms                     0.089271\n",
-       "precip_type_5min:idx                  0.087411\n",
-       "rain_water:kgm2                       0.081230\n",
-       "wind_speed_u_10m:ms                   0.068022\n",
-       "dew_or_rime:idx                       0.065608\n",
-       "sun_azimuth:d                         0.064520\n",
-       "fresh_snow_24h:cm                     0.063604\n",
-       "precip_5min:mm                        0.060665\n",
-       "snow_depth:cm                         0.057964\n",
-       "fresh_snow_12h:cm                     0.047860\n",
-       "fresh_snow_6h:cm                      0.045782\n",
-       "prob_rime:p                           0.040825\n",
-       "fresh_snow_3h:cm                      0.040175\n",
-       "fresh_snow_1h:cm                      0.032443\n",
-       "snow_melt_10min:mm                    0.018081\n",
-       "wind_speed_w_1000hPa:ms               0.006872\n",
-       "elevation:m                                NaN\n",
-       "snow_density:kgm3                          NaN\n",
-       "snow_drift:idx                             NaN"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'X' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mabs\u001b[39m(\u001b[43mX\u001b[49m\u001b[38;5;241m.\u001b[39mcorr()[[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpv_measurement\u001b[39m\u001b[38;5;124m'\u001b[39m]])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
+     ]
     }
    ],
    "source": [
-    "abs(X.corr()[['pv_measurement']]).sort_values(by='pv_measurement', ascending=False)"
+    "abs(X.corr()[['pv_measurement']])"
    ]
   },
   {
@@ -10407,7 +10174,6 @@
    "cell_type": "markdown",
    "id": "d44abdfe-488b-47a0-ac31-8b27ac10d2c7",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
