--- a/marijan/EDA_Marijan.ipynb
+++ b/marijan/EDA_Marijan.ipynb
@@ -776,6 +776,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0d6967d1-a2d2-4e47-a721-5e7cddf5bdd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 1\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=1, figsize=(12, 6))\n",
+    "\n",
+    "#sns.histplot(data=X_train_observed_a_est.loc[A_index21_est].iloc[:,i], kde=True)\n",
+    "sns.histplot(data=X_train_observed_a_est.iloc[:,i], kde=True)\n",
+    "sns.histplot(data=X_train_estimated_a.iloc[:,i], kde=True)\n",
+    "sns.histplot(data=(T), kde=True)\n",
+    "\n",
+    "X_train_estimated_a.iloc[:,i].mean(), \n",
+    "X_train_estimated_a.iloc[:,i].mean(), "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 118,
    "id": "42feeb14-a99f-4b17-8383-3dcdbdf6b4a5",
    "metadata": {
