--- a/marijan/NN-test.ipynb
+++ b/marijan/NN-test.ipynb
@@ -1926,6 +1926,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([29667, 1])"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 86,
    "metadata": {
     "tags": []
